// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path matches the snapshot 1`] = `
<div
  class="gl-path-nav"
  data-testid="gl-path-nav"
  style="--path-bg-color: rgba(0,0,0,0);"
>
  <span
    class="gl-path-fade gl-path-fade-left"
    style="display: none;"
  >
    <button
      aria-label="Scroll left"
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-left"
        size="32"
        variant="current"
      />
    </button>
  </span>
  <ul
    class="gl-path-nav-list"
  >
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-0"
    >
      <button
        class="gl-path-button gl-path-active-item"
      >
        First
        <span
          class="gl-pl-2 gl-font-normal"
        >
          1d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-1"
    >
      <button
        class="gl-path-button"
      >
        Second
        <span
          class="gl-pl-2 gl-font-normal"
        >
          2d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-2"
    >
      <button
        class="gl-path-button"
      >
        Third
        <span
          class="gl-pl-2 gl-font-normal"
        >
          3d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-3"
    >
      <button
        class="gl-path-button"
      >
        Fourth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          4d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-4"
    >
      <button
        class="gl-path-button"
      >
        Fifth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          5d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-5"
    >
      <button
        class="gl-path-button"
      >
        Sixth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          6d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-6"
    >
      <button
        class="gl-path-button"
      >
        Seventh
        <span
          class="gl-pl-2 gl-font-normal"
        >
          7d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-7"
    >
      <button
        category="tertiary"
        class="gl-path-button"
        disabled=""
      >
        Eighth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          8d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-8"
    >
      <button
        class="gl-path-button"
      >
        Ninth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          9d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-1-item-9"
    >
      <button
        class="gl-path-button"
      >
        Tenth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          10d
        </span>
      </button>
    </li>
  </ul>
  <span
    class="gl-path-fade gl-path-fade-right"
    style="display: none;"
  >
    <button
      aria-label="Scroll right"
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-right"
        size="32"
        variant="current"
      />
    </button>
  </span>
</div>
`;

exports[`Path renders the list of items with icons matches the snapshot 1`] = `
<div
  class="gl-path-nav"
  data-testid="gl-path-nav"
  style="--path-bg-color: rgba(0,0,0,0);"
>
  <span
    class="gl-path-fade gl-path-fade-left"
    style="display: none;"
  >
    <button
      aria-label="Scroll left"
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-left"
        size="32"
        variant="current"
      />
    </button>
  </span>
  <ul
    class="gl-path-nav-list"
  >
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-0"
    >
      <button
        class="gl-path-button gl-path-active-item"
      >
        <gl-icon-stub
          class="gl-mr-2"
          data-testid="gl-path-item-icon"
          name="home"
          size="16"
          variant="current"
        />
        First
        <span
          class="gl-pl-2 gl-font-normal"
        >
          12d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-1"
    >
      <button
        class="gl-path-button"
      >
        Second
        <span
          class="gl-pl-2 gl-font-normal"
        >
          2d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-2"
    >
      <button
        class="gl-path-button"
      >
        Third
        <span
          class="gl-pl-2 gl-font-normal"
        >
          3d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-3"
    >
      <button
        class="gl-path-button"
      >
        Fourth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          4d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-4"
    >
      <button
        class="gl-path-button"
      >
        Fifth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          5d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-5"
    >
      <button
        class="gl-path-button"
      >
        Sixth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          6d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-6"
    >
      <button
        class="gl-path-button"
      >
        Seventh
        <span
          class="gl-pl-2 gl-font-normal"
        >
          7d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-7"
    >
      <button
        category="tertiary"
        class="gl-path-button"
        disabled=""
      >
        Eighth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          8d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-8"
    >
      <button
        class="gl-path-button"
      >
        Ninth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          9d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-12-item-9"
    >
      <button
        class="gl-path-button"
      >
        Tenth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          10d
        </span>
      </button>
    </li>
  </ul>
  <span
    class="gl-path-fade gl-path-fade-right"
    style="display: none;"
  >
    <button
      aria-label="Scroll right"
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-right"
        size="32"
        variant="current"
      />
    </button>
  </span>
</div>
`;

exports[`Path renders the list of items with metrics matches the snapshot 1`] = `
<div
  class="gl-path-nav"
  data-testid="gl-path-nav"
  style="--path-bg-color: rgba(0,0,0,0);"
>
  <span
    class="gl-path-fade gl-path-fade-left"
    style="display: none;"
  >
    <button
      aria-label="Scroll left"
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-left"
        size="32"
        variant="current"
      />
    </button>
  </span>
  <ul
    class="gl-path-nav-list"
  >
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-0"
    >
      <button
        class="gl-path-button gl-path-active-item"
      >
        First
        <span
          class="gl-pl-2 gl-font-normal"
        >
          12d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-1"
    >
      <button
        class="gl-path-button"
      >
        Second
        <span
          class="gl-pl-2 gl-font-normal"
        >
          2d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-2"
    >
      <button
        class="gl-path-button"
      >
        Third
        <span
          class="gl-pl-2 gl-font-normal"
        >
          3d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-3"
    >
      <button
        class="gl-path-button"
      >
        Fourth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          4d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-4"
    >
      <button
        class="gl-path-button"
      >
        Fifth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          5d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-5"
    >
      <button
        class="gl-path-button"
      >
        Sixth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          6d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-6"
    >
      <button
        class="gl-path-button"
      >
        Seventh
        <span
          class="gl-pl-2 gl-font-normal"
        >
          7d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-7"
    >
      <button
        category="tertiary"
        class="gl-path-button"
        disabled=""
      >
        Eighth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          8d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-8"
    >
      <button
        class="gl-path-button"
      >
        Ninth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          9d
        </span>
      </button>
    </li>
    <li
      class="gl-path-nav-list-item"
      id="path-8-item-9"
    >
      <button
        class="gl-path-button"
      >
        Tenth
        <span
          class="gl-pl-2 gl-font-normal"
        >
          10d
        </span>
      </button>
    </li>
  </ul>
  <span
    class="gl-path-fade gl-path-fade-right"
    style="display: none;"
  >
    <button
      aria-label="Scroll right"
      class="gl-clear-icon-button"
    >
      <gl-icon-stub
        name="chevron-right"
        size="32"
        variant="current"
      />
    </button>
  </span>
</div>
`;
